# agentic-ai-langgraph-workflows

./: .env.example  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  evaluation.md  langgraph-vs-simple-workflow.md  production-readiness.md  security-and-governance.md  security-and-privacy.md
examples/: requests.json  sample_execution_trace.json
src/: demo.py  langgraph_workflow.py  workflow.py
tests/: test_workflow.py
